--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap');
 
 @font-face {
   font-family: "Century Gothic";
@@ -23,6 +23,7 @@
   --primary-color: #007e3b;
   --secondary-color: #ecc30b;
 
+
   --heading-font-family: "Century Gothic", Arial, Helvetica, sans-serif;
   --body-font-family: "Roboto", Helvetica, Arial, sans-serif;
 
@@ -30,9 +31,14 @@
   --h2-font-size: min(max(48px, 6.25vw), 90px);
 }
 
-body {
+* {
+    box-sizing: border-box;
+}
+
+html,body {
 margin: 0;
   color: var(--dark-color);
+  padding: 0;
 }
 
 .li {
@@ -43,7 +49,15 @@ a {
   color: inherit;
 }
 
+h1,h2,h3,h4,h5,h6,p{
+    margin: 0;
+}
+
 .navbar {
+    background-color: white ;
+position: fixed;
+top:0;
+width: 100vw;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
