--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     height: 100vh;
+    min-height: 400px;
     padding-top: 13vh ;
     flex-direction: row;
     font-family: var(--body-font-family);
