--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,11 +1,10 @@
-/* @import url('./style.css'); */
+@import url('./style.css');
 
 .home-main{
     display: flex;
     justify-content: center;
-    height: 100vh;
+    height: 87vh;
     min-height: 400px;
-    padding-top: 13vh ;
     flex-direction: row;
     font-family: var(--body-font-family);
 }
