implemnent asia, africa and europe map

--- a/assets/css/assistance.css
+++ b/assets/css/assistance.css
@@ -82,5 +82,5 @@ input[type="submit"] {
   padding: 1.85vh 6.72vw;
   text-transform: uppercase;
   float: right;
-  margin-top: 11.11vw;
+  margin-top: 11.11vh;
 }
