--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -6,6 +6,10 @@
     padding: 3.24vh 7.916vw 4.167vh 6.6vw;
 }
 
+.home-info.admin-info{
+    padding: 9vh 11vw;
+}
+
 #adminLoginForm input:not([type="submit"]){
     max-width: unset;
 }
@@ -36,6 +40,17 @@ margin-bottom:1vh ;
     text-transform: uppercase; 
     width: 100%;     
     margin-top: 2.31vh;
+    margin-bottom: 2.31vh;
+  }
+
+  .password-reset{
+    font-family:var(--heading-font-family);
+    font-size:  0.9375vw; 
+    text-decoration-line: underline; 
+    color: #8C8C8C;
+    text-align: center;
+    display: flex;
+    justify-content: center;
   }
 
 
@@ -49,6 +64,7 @@ margin-bottom:1vh ;
     justify-content: space-between;
     align-items: center;
     margin-bottom:8.518vh ;
+    margin-right: -3vw ;
 }
 
 .admin-maps-welcome{
@@ -64,3 +80,16 @@ line-height: 1.219;
     width: 6.041vw;
     height: 6.041vw;
 }
+
+#createUserForm input[type="submit"] {
+    font-weight: bold;
+    font-size: 2.5vw;
+    padding: 1.85vh 6.72vw;
+    float: right;
+    margin-bottom: 2vh;
+  }
+
+  .create-user-main {
+    padding: 8vh 13vw;
+  }
+  
