implement admin africa map

--- a/assets/css/data.css
+++ b/assets/css/data.css
@@ -1,5 +1,11 @@
 @import url("./style.css");
 
+html {
+    --scrollbarBG: rgba(0, 0, 0, 0.76);
+    --thumbBG: #4E4E4E;
+  }
+  
+
 .data-main {
   height: 87vh;
   display: flex;
@@ -60,9 +66,9 @@
 .country-title {
     font-family: var(--heading-font-family);
     text-transform: uppercase;
-    font-size: 42px;
+    font-size: 2.18vw;
     text-align: right;
-    margin: 12px 0px;
+    margin: 0 0 2.5vh;
 }
 
 .loading {
@@ -72,14 +78,47 @@
 }
 
 .tippy-box {
-    background: rgba(0, 0, 0, 0.66);
+    background: rgba(0, 0, 0, 0.76);
     border-radius: 20px;  
 }
 .tippy-content{
-    padding: 40px 20px 20px 20px;
-    background: rgba(0, 0, 0, 0.66);
+    padding: 4vh 1.56vw 1.5vh;
+    background: rgba(0, 0, 0, 0.76);
     border-radius: 20px;
 }
+.popover-content{
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+}
+
+.pop-scrollable{
+    padding: 0px 22px;
+    max-height: 41.6vh;
+    overflow-y: auto;
+}
+
+.admin.pop-scrollable{
+    padding: 0%;
+    margin: auto -0.5vw;
+}
+.pop-scrollable::-webkit-scrollbar {
+    width: 12px;
+  }
+  .pop-scrollable {
+    scrollbar-width: thin;
+    scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+  }
+  .pop-scrollable::-webkit-scrollbar-track {
+    background: var(--scrollbarBG);
+    border-radius: 10px;
+  }
+  .pop-scrollable::-webkit-scrollbar-thumb {
+    background-color: var(--thumbBG) ;
+    border-radius: 10px;
+    height: 76px; 
+  }
+
 
 .pop-btn {
     font-family: "Century Gothic";
@@ -87,51 +126,140 @@
     border-radius: 20px;
     font-style: normal;
     font-weight: bold;
-    font-size: 18px;
-    line-height: 22px;
+    font-size: 0.9375vw;
+    line-height: 1.2;
     color: #ffffff;
     margin-bottom: 30px;
     padding: 10px;
+}
+
+.pop-btn:focus{
+    outline: none;
+}
+
+input.pop-search {
+    border: 2px solid #C4C4C4;
+    box-sizing: border-box;
+    border-radius: 20px;
+    padding: 1.1vh 1.2vw;
+    background-color: transparent;
+    height: unset;
+    max-width: unset;
+    width: 100%;
+    margin: auto auto 2.407vh;
+    background-image: url(../img/svg/searchIcon.svg);
+    background-repeat: no-repeat;
+    background-position: 93% 45%;
+    background-size: 7%;
+    font: 400 0.9375vw var(--heading-font-family);
+}
+
+input.pop-search:focus{
+    transition: all 0.2s linear;
+    background-color: white;
+    background-image: none;
 }
 
 .pop-img{
     width: 100%;
 }
 
-
-.tippy-box>.tippy-arrow::before {
-    /* transform: scale(3.5); */
+.pop-svg{
+    max-width: 4.22vw;
 }
 
-.tippy-box[data-placement^=left]>.tippy-svg-arrow:after,  
-.tippy-box[data-placement^=left]>.tippy-svg-arrow>svg{
-    transform: rotate(0deg) ;
-}
 
-.tippy-box[data-placement^=right]>.tippy-svg-arrow:after, 
-.tippy-box[data-placement^=right]>.tippy-svg-arrow>svg {
-    transform: rotate(-180deg);
-}
-
-.tippy-box[data-placement^=top]>.tippy-svg-arrow:after, .tippy-box[data-placement^=top]>.tippy-svg-arrow>svg {
-    top: 10px;
-    transform: rotate(90deg);
-}
-
-.popover-content{
-    color: #ffffff;
-    font-weight: bold;
+.pop-info{
     display: flex;
-    flex-direction: column;
+    align-items: end;
+    padding: 2vh 1.14vw 2vh 0.57vw;
+    font-family: var(--body-font-family);
+    line-height: 1.2;
 }
 
-.pop-scrollable{
-    padding: 0px 22px;
-    max-height: 450px;
-    overflow-y: scroll;
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none;  /* IE 10+ */
+.pop-info:first-of-type{
+    border-radius: 10px 10px 0px 0px;
 }
+
+.pop-info:nth-of-type(2n+1) {
+    background-color: #4E4E4E;
+}
+
+.pop-info>div{
+    margin-left: 1.19vw ;
+}
+
+.pop-info-title{
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;   
+    font-weight: bold;  
+    margin-bottom: 0.5vh;
+}
+
+.pop-info-title span:first-of-type{
+font-size: 1.15vw;
+}
+
+.pop-info-title span:last-of-type{
+font-size: 0.807vw;
+min-width: 5.78vw;
+text-align: right;
+}
+
+.pop-info-title[data-status="1"] span:last-of-type{
+    color: #F48220;
+}
+
+.pop-info-title[data-status="2"] span:last-of-type{
+    color: #20B6D8;
+}
+
+.pop-info-title[data-status="3"] span:last-of-type{
+    color: #CAD023;
+}
+
+.pop-summary{
+font-size: 0.73vw;
+line-height: 1.15;
+}
+.pop-summary-location{
+margin-top: 0.8vh;
+font-style: italic;
+font-weight: bold;
+font-size: 0.9375vw;
+text-align: right;
+}
+
+.pop-info-btn{
+    background-color: #20AAB3;
+border-radius: 7px;
+text-align: center;
+text-transform: capitalize;
+padding: 0.67vh;
+width: 100%;
+margin-top:1.5vh ;
+}
+
+.pop-info-btn::before{
+    content: 'Mark as complete';
+    font-size: 0.807vw;
+    font-weight: 500;
+    font-family: var(--body-font-family);
+    color: #FFFFFF;
+}
+
+.pop-info-title[data-status="2"] ~ .pop-info-btn{
+    display: none;
+}
+
+.pop-info-title[data-status="3"] ~ .pop-info-btn{
+    background-color: #127F3C;
+}
+.pop-info-title[data-status="3"] ~ .pop-info-btn::before{
+    content: 'Takeover Request';
+}
+
 
 .pop-article{
 font-family: 'Roboto', Arial, Helvetica, sans-serif;
@@ -153,7 +281,23 @@ padding-top: 16px;
 text-align: center;
 }
 
-.pop-scrollable::-webkit-scrollbar {
-    width: 0px;
-    background: transparent; /* Chrome/Safari/Webkit */
+
+
+.tippy-box>.tippy-arrow::before {
+    /* transform: scale(3.5); */
+}
+
+.tippy-box[data-placement^=left]>.tippy-svg-arrow:after,  
+.tippy-box[data-placement^=left]>.tippy-svg-arrow>svg{
+    transform: rotate(0deg) ;
+}
+
+.tippy-box[data-placement^=right]>.tippy-svg-arrow:after, 
+.tippy-box[data-placement^=right]>.tippy-svg-arrow>svg {
+    transform: rotate(-180deg);
+}
+
+.tippy-box[data-placement^=top]>.tippy-svg-arrow:after, .tippy-box[data-placement^=top]>.tippy-svg-arrow>svg {
+    top: 10px;
+    transform: rotate(90deg);
 }
