--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,700&display=swap');
 
 @font-face {
   font-family: "Century Gothic";
@@ -56,6 +56,15 @@ body{
 }
 
 .li {
+}
+
+button{
+  border: none;
+  cursor: pointer;
+}
+
+button:focus{
+  outline: none;
 }
 
 a {
