--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,7 +187,7 @@ width: 100vw;
         margin-left: 1.77vw;
       }
       
-      input:not([type="submit"]),
+      input[type=text][type=password][type=tel],
       textarea,
       select {
         margin-top: 2.31vh;
