--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,14 +236,25 @@ width: 100vw;
       
       
 
-      .sr-only {
-        position: absolute;
-        height: 1px;
-        width: 1px;
-        /* IE 6 and 7 */
-        clip: rect(1px 1px 1px 1px); 
-        clip: rect(1px,1px,1px,1px);
-        clip-path: polygon(0px 0px, 0px 0px, 0px 0px);
-        -webkit-clip-path: polygon(0px 0px, 0px 0px, 0px 0px);
-        overflow: hidden !important;
-        }
+.sr-only {
+  position: absolute;
+  height: 1px;
+  width: 1px;
+  /* IE 6 and 7 */
+  clip: rect(1px 1px 1px 1px); 
+  clip: rect(1px,1px,1px,1px);
+  clip-path: polygon(0px 0px, 0px 0px, 0px 0px);
+  -webkit-clip-path: polygon(0px 0px, 0px 0px, 0px 0px);
+  overflow: hidden !important;
+  }
+
+
+
+ .modal-header{
+   border: none;
+ } 
+
+
+
+
+        
