--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,10 +249,17 @@ width: 100vw;
   }
 
 
-
  .modal-header{
    border: none;
  } 
+
+ .modal-dialog{
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  min-height: calc(100% - (.5rem * 2));
+}
 
 
 
