add margin auto to modal-dialog and content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,8 +259,12 @@ width: 100vw;
   -ms-flex-align: center;
   align-items: center;
   min-height: calc(100% - (.5rem * 2));
+  margin: auto;
 }
 
+.modal-content{
+  margin: auto;
+}
 
 
 
