--- a/assets/css/assistance.css
+++ b/assets/css/assistance.css
@@ -51,7 +51,9 @@ label {
   margin-left: 1.77vw;
 }
 
-input:not([type="submit"]),
+input[type=text],
+input[type=password],
+input[type=tel],
 textarea,
 select {
   margin-top: 2.31vh;
@@ -75,7 +77,7 @@ textarea {
   padding: 1.85vh 6.72vw; 
   float: right;
   margin-top: 4vh;
-  margin-bottom: 10vh;
+  margin-bottom: 4vh;
 }
 
 .modal-header .close{
@@ -104,4 +106,116 @@ line-height:1.23;
   font-size: 1.25vw;
 line-height: 1.2;
 margin: 5vh 0 4vh;
+}
+
+
+.control {
+  font-family: var(--body-font-family);
+  display: block;
+  position: relative;
+  padding-left: 1.2vw;
+  margin-bottom: 0.5vh;
+  cursor: pointer;
+  font-size: 0.73vw;
+  letter-spacing: 0.3px;
+  font-weight: 500;
+  color: #b5b5b5;
+  width: 100%;
+  text-transform: capitalize;
+}
+
+.control input {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+.control__indicator {
+  position: absolute;
+  top: 0px;
+  left: 0;
+  height: 0.77vw;
+  width: 0.77vw;
+  background: transparent;
+  border: 1px solid #c4c4c4;
+}
+
+.control:hover input ~ .control__indicator,
+.control input:focus ~ .control__indicator {
+  background: #cdf5e0;
+}
+.control input:checked ~ .control__indicator {
+  background: #019747;
+}
+.control:hover input:not([disabled]):checked ~ .control__indicator,
+.control input:checked:focus ~ .control__indicator {
+  background: #007e3b;
+}
+.control input:disabled ~ .control__indicator {
+  background: #e6e6e6;
+  opacity: 0.6;
+  pointer-events: none;
+}
+.control__indicator:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+.control input:checked ~ .control__indicator:after {
+  display: block;
+}
+.control--checkbox .control__indicator:after {
+  left: 30%;
+  top: 0%;
+  width: 0.16vw;
+  height: 0.74vh;
+  border: solid #fff;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+.control--checkbox input:disabled ~ .control__indicator:after {
+  border-color: #7b7b7b;
+}
+
+#assistanceForm .control {
+  font-family: var(--heading-font-family);
+  padding-left: 3.2vw;
+  margin-bottom: 0.5vh;
+  font-size: 1.25vw;
+  letter-spacing: 0.3px;
+  font-weight: 400;
+  color: #000000;
+}
+
+#assistanceForm .control__indicator {
+  top: -0.4vw;
+  left: 0;
+  height: 2.5vw;
+  width: 2.5vw;
+  border: 3px solid #c4c4c4;
+  border-radius: 10px;
+}
+
+#assistanceForm .control--checkbox .control__indicator:after {
+  left: 33%;
+  top: 10%;
+  width: 0.6vw;
+  height: 2vh;
+  border: solid #fff;
+  border-width: 0 0.26vw 0.26vw 0;
+  transform: rotate(45deg);
+}
+
+.privacy-check{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.privacy-link {
+  font-family: var(--heading-font-family);
+  font-size: 0.9375vw;
+  line-height: 1.22;
+  text-decoration: underline;
+  color: #8C8C8C;
+  margin: 1.2vh 6.25vw; 
 }
