--- a/assets/css/privacy-policy.css
+++ b/assets/css/privacy-policy.css
@@ -39,6 +39,7 @@
   margin-bottom: 1vh;
 }
 
+
 .privacy-footer{
   background-color: #E6E6E6;
   padding: 8.24vh 14.1vw 14.81vh ;
@@ -47,10 +48,13 @@
 }
 
 
-
 .privacy-footer>div{
   flex: 1 1 0px;
   text-align: center;
+}
+
+.privacy-footer img{
+  max-width: 65%;
 }
 
 .privacy-footer h6{
